--- a/index.html
+++ b/index.html
@@ -8,6 +8,49 @@
     <link rel="icon" href="img/zombie.ico">
 </head>
 <body>
-    
+    <!-- Cabeçalho -->
+    <header>
+        <div class="container">
+
+        </div>
+    </header>
+
+    <!-- Destaque -->
+    <main>
+        <div class="container">
+            <h1>Meu Primeiro Site</h1>
+            <h2>Praticando os primeiros passos no desenvolvimento web com HTML e CSS</h2>
+        </div>
+    </main>
+
+    <!-- Sobre -->
+    <section>
+        <div class="container">
+            <h2>Bem-vindo ao meu primeiro site!</h2>
+        </div>
+    </section>
+
+    <!-- Links relacionados -->
+    <aside>
+        <div class="container">
+            <h2>Referências</h2>
+        </div>
+    </aside>
+
+    <!-- Conteúdo -->
+    <section>
+        <div class="container">
+            <h2>Conteúdo</h2>
+            <h3>HTML5</h3>
+            <h3>CSS3</h3>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <div class="container">
+            
+        </div>
+    </footer>
 </body>
 </html>
