--- a/index.html
+++ b/index.html
@@ -1,56 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Atividade 3</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/zombie.ico">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="img/zombie.ico" />
+  </head>
+  <body>
     <!-- Cabeçalho -->
-    <header>
-        <div class="container">
-
+    <header id="home">
+      <div class="container Flex">
+        <div id="logo">
+          <img src="img/logo-engrena.png" alt="logomarca" />
         </div>
+
+        <nav>
+          <input type="checkbox" id="check" />
+          <label for="check">&#x2630;</label>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#conteudo">Conteúdo</a></li>
+            <li><a href="#contato">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <!-- Destaque -->
     <main>
-        <div class="container">
-            <h1>Meu Primeiro Site</h1>
-            <h2>Praticando os primeiros passos no desenvolvimento web com HTML e CSS</h2>
-        </div>
+      <div class="container">
+        <h1>Meu Primeiro Site</h1>
+        <h2>
+          Praticando os primeiros passos no desenvolvimento web com HTML e CSS
+        </h2>
+      </div>
     </main>
 
     <!-- Sobre -->
-    <section>
-        <div class="container">
-            <h2>Bem-vindo ao meu primeiro site!</h2>
-        </div>
+    <section id="sobre">
+      <div class="container">
+        <h2>Bem-vindo ao meu primeiro site!</h2>
+      </div>
     </section>
 
     <!-- Links relacionados -->
     <aside>
-        <div class="container">
-            <h2>Referências</h2>
-        </div>
+      <div class="container">
+        <h2>Referências</h2>
+      </div>
     </aside>
 
     <!-- Conteúdo -->
-    <section>
-        <div class="container">
-            <h2>Conteúdo</h2>
-            <h3>HTML5</h3>
-            <h3>CSS3</h3>
-        </div>
+    <section id="conteudo">
+      <div class="container">
+        <h2>Conteúdo</h2>
+        <h3>HTML5</h3>
+        <h3>CSS3</h3>
+      </div>
     </section>
 
     <!-- Rodapé -->
-    <footer>
-        <div class="container">
-            
-        </div>
+    <footer id="contato">
+      <div class="container"></div>
     </footer>
-</body>
+    <a href="#home" id="topo"><img src="img/topo.png" alt="topo do site"></a>
+  </body>
 </html>
