Ajustes na seção sobre, inserção de imagens, correção no menu

--- a/index.html
+++ b/index.html
@@ -41,17 +41,32 @@
 
     <!-- Sobre -->
     <section id="sobre">
-      <div class="container">
-        <h2>Bem-vindo ao meu primeiro site!</h2>
-      </div>
-    </section>
-
-    <!-- Links relacionados -->
-    <aside>
-      <div class="container">
-        <h2>Referências</h2>
+      <div class="container1">
+        <div id="destaqueSobre">
+          <img src="img/html5css3.jpg" alt="notebook">
+        </div>
+        <div id="texto-sobre">
+          <h2>Bem-vindo ao meu primeiro site!</h2>
+          <p>Este site é uma atividade de desenvolvimento front-end posposta a partir de conhecimentos adiquiridos no terceiro módulo do curso full stack jr. da MaisPraTi. 
+            Ele tem como objetivo colocar em prática os elementos de HTML e CSS estudados nesse módulo.
+            Você sabia que o html e o css são responsáveis por praticamento todo front-end de sites, páginas e qualquer aplicação na internet?</p>
+        </div>
+        <!-- Links relacionados -->
+    <aside id="links">
+      <div class="container2">
+        <div id="texto-sobre"><!--textoSobre-->
+          <h2>Referências</h2>
+          <p>Aqui temos alguns links de referências onde podemos pesquisar sobre cada elemento e suas propriedades dentro do html e css. Clique no link para saber mais sobre.</p>
+          <ul>
+            <li><a href="https://www.w3schools.com/html">w3schools</a></li>
+            <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS">MDN</a></li>
+            <li><a href="https://maisprati.com.br/">+Prati</a></li>
+        </ul>
+        </div>
       </div>
     </aside>
+      </div>
+    </section>
 
     <!-- Conteúdo -->
     <section id="conteudo">
