Ajustado cartões da seção conteúdo

--- a/index.html
+++ b/index.html
@@ -72,8 +72,22 @@
     <section id="conteudo">
       <div class="container">
         <h2>Conteúdo</h2>
-        <h3>HTML5</h3>
-        <h3>CSS3</h3>
+        <div class="cards Flex3">
+          <div class="card">
+            <img src="img/estruturahtml.png" alt="Estrutura html5">
+            <h3>HTML5</h3>
+            <p>
+              HTML é a sigla para Linguagem de Marcação de Hipertexto, e pode ser definida como uma linguagem de computador, mas não de programação. Ela é amplamente utilizada para desenvolver páginas da web, uma vez que documentos HTML são facilmente interpretados pela maioria dos navegadores.</p>
+              <a href="https://www.youtube.com/watch?v=0409yssD3vk" target="_blank" class="Botao">Aprenda +</a>
+          </div>
+          <div class="card">
+            <img src="img/boxmodel.png" alt="CSS3">
+            <h3>CSS3</h3>
+            <p>CSS é a sigla para Cascading Style Sheet e sua função principal é atribuir estilo a elementos escritos em HTML, ou seja, o CSS cuida da parte visual e estética de um site: cores, fontes, espaçamentos entre parágrafos, tabelas, variações de layouts, ajustes de imagens, tudo isso entra como estilização.</p>
+            <a href="https://www.youtube.com/watch?v=YNqrNqpq6-E" target="_blank" class="Botao">Aprenda +</a>
+          </div>
+        </div>
+        
       </div>
     </section>
 
