--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="home">
       <div class="container Flex">
         <div id="logo">
-          <img src="img/logo-engrena.png" alt="logomarca" />
+          <img src="img/logo200px.png" alt="logomarca" />
         </div>
 
         <nav>
@@ -92,8 +92,45 @@
     </section>
 
     <!-- Rodapé -->
-    <footer id="contato">
-      <div class="container"></div>
+    <address>
+      <div class="container Flex5">
+        <div id="contato">
+          <a href="https://api.whatsapp.com/send?phone=5551999887799" target="_blank">
+            <img src="img/whatsapp.png" alt="whatsapp" title="Abrir no whatsapp">
+            <p>(51) 99988-7799</p>
+          </a>
+          <img src="img/fone.png" alt="fone" title="Telefone alternativo">
+          <p>(51) 00011-2233</p>
+        </div>
+        <div id="endereco">
+          <a href="https://maps.app.goo.gl/5XmDWKHJy8NJ8JXAA"><img src="img/mapa.png" alt="Mapa" id="iconeMapa"></a>
+          <img src="img/local.png" alt="Local" id="iconeLocal">
+          <p>Rua Caí, 1527 - conj. 911</p>
+          <p>Bairro Jardins Colinas</p>
+          <p>Cachoeirinha - RS</p>
+          <a href="mailt:consultec.asb@gmail.com?subject=meuprimeirosite">
+            <img src="img/email.png" alt="email" title="Enviar e-mail">
+            <p>consultec.asb@gmail.com</p>
+          </a>
+        </div>
+        <div id="googleMaps">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4344.617270124533!2d-51.09012192352182!3d-29.930968326025333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951973dd03a310bb%3A0x429478e356400d35!2sR.%20Ca%C3%AD%2C%201527%20-%20Jardins%20Colinas%2C%20Cachoeirinha%20-%20RS%2C%2094940-030!5e1!3m2!1spt-BR!2sbr!4v1728915251243!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </address>
+    <footer>
+      <div class="container Flex4">
+        <div id="copyright">
+          <p>&#169; Copyright @2024, Todos os direitos reservados by Alexandre Brito.</p>
+        </div>
+        <div id="social">
+          <a href="https://www.youtube.com/" target="_blank"><img src="img/youtube.png" alt="youtube"></a>
+          <a href="https://www.linkedin.com/" target="_blank"><img src="img/linkedin.png" alt="linkedin"></a>
+          <a href="https://pt-br.facebook.com/" target="_blank"><img src="img/facebook.png" alt="facebook"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="instagram"></a>
+          <a href="https://twitter.com" target="_blank"><img src="img/twitter.png" alt="twitter"></a>
+        </div>
+      </div>
     </footer>
     <a href="#home" id="topo"><img src="img/topo.png" alt="topo do site"></a>
   </body>
