--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </div>
         <div id="texto-sobre">
           <h2>Bem-vindo ao meu primeiro site!</h2>
-          <p>Este site é uma atividade de desenvolvimento front-end posposta a partir de conhecimentos adiquiridos no terceiro módulo do curso full stack jr. da MaisPraTi. 
-            Ele tem como objetivo colocar em prática os elementos de HTML e CSS estudados nesse módulo.
-            Você sabia que o html e o css são responsáveis por praticamento todo front-end de sites, páginas e qualquer aplicação na internet?</p>
+          <p>Este site é uma atividade do módulo 3 do curso fullstack jr, da +praTi, etapa front-end, posposto para balizar os conhecimentos adiquiridos em aulas. O desafio é desenvolver um site front-end, que atenda os requisitos solicitados (como por exemplo, estruturaçao do html e responsívidade em css).
+          Ele tem como objetivo colocar em prática os elementos de HTML e CSS estudados nesse módulo.</p><br>
+          <p><strong>Curiosidade: </strong> Você sabia que o html e o css são responsáveis por praticamento todo front-end de sites, páginas e outras aplicações na internet?</p>
         </div>
         <!-- Links relacionados -->
     <aside id="links">
@@ -58,9 +58,9 @@
           <h2>Referências</h2>
           <p>Aqui temos alguns links de referências onde podemos pesquisar sobre cada elemento e suas propriedades dentro do html e css. Clique no link para saber mais sobre.</p>
           <ul>
-            <li><a href="https://www.w3schools.com/html">w3schools</a></li>
-            <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS">MDN</a></li>
-            <li><a href="https://maisprati.com.br/">+Prati</a></li>
+            <li><a href="https://www.w3schools.com/html" target="_blank">w3schools</a></li>
+            <li><a href="https://developer.mozilla.org/pt-BR/docs/Web/CSS" target="_blank">MDN</a></li>
+            <li><a href="https://maisprati.com.br/" target="_blank">+Prati</a></li>
         </ul>
         </div>
       </div>
